tests/baselines/reference/parser_continueInIterationStatement4.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueInIterationStatement4.ts(1,15): error TS2304: Cannot find name 'something'.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueInIterationStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'something'.
      continue;
    }